--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sourcerer-hyperterm",
-  "version": "1.0.2",
+  "name": "hyperterm-sourcerer",
+  "version": "1.0.0",
   "description": "Sourcerer theme for HyperTerm based on Xero/Sourcerer https://github.com/xero/sourcerer",
   "main": "index.js",
   "scripts": {
